3.1/_sources/_tags/plotting.rst.txt
Tag: plotting
#############

.. toctree::
    :maxdepth: 1
    :caption: Examples with this tag:

    ../examples/matlab_experimental/diff_flame.rst
    ../examples/matlab_experimental/equil.rst
    ../examples/matlab_experimental/flame1.rst
    ../examples/matlab_experimental/flame2.rst
    ../examples/matlab_experimental/ignite.rst
    ../examples/matlab_experimental/ignite_hp.rst
    ../examples/matlab_experimental/ignite_uv.rst
    ../examples/matlab_experimental/isentropic.rst
    ../examples/matlab_experimental/lithium_ion_battery.rst
    ../examples/matlab_experimental/periodic_cstr.rst
    ../examples/matlab_experimental/plug_flow_reactor.rst
    ../examples/matlab_experimental/prandtl1.rst
    ../examples/matlab_experimental/prandtl2.rst
    ../examples/matlab_experimental/reactor1.rst
    ../examples/matlab_experimental/reactor2.rst
    ../examples/matlab_experimental/surf_reactor.rst
    ../examples/python/kinetics/extract_submechanism.rst
    ../examples/python/kinetics/interactive_path_diagram.rst
    ../examples/python/kinetics/lithium_ion_battery.rst
    ../examples/python/kinetics/mechanism_reduction.rst
    ../examples/python/onedim/diffusion_flame.rst
    ../examples/python/onedim/diffusion_flame_batch.rst
    ../examples/python/onedim/diffusion_flame_continuation.rst
    ../examples/python/onedim/diffusion_flame_extinction.rst
    ../examples/python/onedim/flame_fixed_T.rst
    ../examples/python/onedim/flame_speed_convergence_analysis.rst
    ../examples/python/onedim/flamespeed_sensitivity.rst
    ../examples/python/onedim/premixed_counterflow_twin_flame.rst
    ../examples/python/reactors/NonIdealShockTube.rst
    ../examples/python/reactors/combustor.rst
    ../examples/python/reactors/custom.rst
    ../examples/python/reactors/custom2.rst
    ../examples/python/reactors/fuel_injection.rst
    ../examples/python/reactors/ic_engine.rst
    ../examples/python/reactors/periodic_cstr.rst
    ../examples/python/reactors/piston.rst
    ../examples/python/reactors/reactor1.rst
    ../examples/python/reactors/reactor2.rst
    ../examples/python/reactors/sensitivity1.rst
    ../examples/python/thermo/isentropic.rst
    ../examples/python/thermo/vapordome.rst
