3.2/_sources/_tags/plotting.rst.txt
Tag: plotting
#############

.. toctree::
    :maxdepth: 1
    :caption: Examples with this tag:

    ../examples/matlab/burner_flame.rst
    ../examples/matlab/diffusion_flame.rst
    ../examples/matlab/equil.rst
    ../examples/matlab/ignite_hp.rst
    ../examples/matlab/ignite_uv.rst
    ../examples/matlab/isentropic.rst
    ../examples/matlab/lithium_ion_battery.rst
    ../examples/matlab/periodic_cstr.rst
    ../examples/matlab/plug_flow_reactor.rst
    ../examples/matlab/prandtl1.rst
    ../examples/matlab/prandtl2.rst
    ../examples/matlab/reactor1.rst
    ../examples/matlab/reactor2.rst
    ../examples/matlab/surf_reactor.rst
    ../examples/python/kinetics/extract_submechanism.rst
    ../examples/python/kinetics/interactive_path_diagram.rst
    ../examples/python/kinetics/lithium_ion_battery.rst
    ../examples/python/kinetics/mechanism_reduction.rst
    ../examples/python/onedim/diffusion_flame.rst
    ../examples/python/onedim/diffusion_flame_batch.rst
    ../examples/python/onedim/diffusion_flame_continuation.rst
    ../examples/python/onedim/diffusion_flame_extinction.rst
    ../examples/python/onedim/flame_fixed_T.rst
    ../examples/python/onedim/flame_speed_convergence_analysis.rst
    ../examples/python/onedim/flamespeed_sensitivity.rst
    ../examples/python/onedim/premixed_counterflow_twin_flame.rst
    ../examples/python/reactors/combustor.rst
    ../examples/python/reactors/custom.rst
    ../examples/python/reactors/custom2.rst
    ../examples/python/reactors/fuel_injection.rst
    ../examples/python/reactors/ic_engine.rst
    ../examples/python/reactors/non_ideal_shock_tube.rst
    ../examples/python/reactors/periodic_cstr.rst
    ../examples/python/reactors/piston.rst
    ../examples/python/reactors/reactor1.rst
    ../examples/python/reactors/reactor2.rst
    ../examples/python/reactors/sensitivity1.rst
    ../examples/python/thermo/isentropic.rst
    ../examples/python/thermo/vapordome.rst
